tests/aster/x/mochi/rosetta/determine-if-a-string-is-collapsible.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/determine-if-a-string-is-collapsible.mochi:10:14

 10 |     let ch = substring(s, i, i + 1)
    |              ^

help:
  Declare substring before use
